# pyawd-lib

./: LICENSE.md  README.md  pyproject.toml
src/: main.py
src/pyawd/: PyAwdConfig.py  PyAwdLogger.py
src/pyawd/awd/: AWDBlock.py  AWDDocument.py  AWDHeader.py  CompressionType.py
src/pyawd/awd/blocks/: MeshInstanceBlock.py  MetaDataBlock.py  NamespaceBlock.py  TriangleGeometryBlock.py  __init__.py
src/pyawd/awd/types/: BlockAddr.py  Field.py  Matrix.py  Matrix3x2.py  Matrix3x3.py  Matrix4x3.py  Matrix4x4.py  NumAttrList.py  SceneHeader.py  SubMesh.py  UserAttrList.py  VarString.py
src/pyawd/awd/types/streams/: DataStream.py  FaceIndexStream.py  UVCoordinatesStream.py  VertexPositionsStream.py
