[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyawd-lib_joursin"
version = "0.0.1"
authors = [
  { name="Jannick Oursin", email="kontakt@joursin.com" },
]
description = "Suite for processing AWD files"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ProjectOpenOrbit/pyawd-lib"
"Bug Tracker" = "https://github.com/ProjectOpenOrbit/pyawd-lib/issues"