[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyawd-lib"
version = "0.0.1"
authors = [
  { name="Jannick Oursin", email="kontakt@joursin.com" },
]
description = "Suite for processing AWD files"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ProjectOpenOrbit/pyawd-lib"
"Bug Tracker" = "https://github.com/ProjectOpenOrbit/pyawd-lib/issues"